--- a/wal/.config/wpg/wpg.conf
+++ b/wal/.config/wpg/wpg.conf
@@ -4,8 +4,8 @@ gtk = true           # live reload GTK+ or not
 active = 0           # color to use as "active" and "inactive" shades
 light_theme = false  # whether to use a light theme or not
 editor = code        # editor to use on templates
-execute_cmd = false  # execute command after applying theme
-command = alacritty -e echo hi # command to execute 
+execute_cmd = true  # execute command after applying theme
+command = ~/dotfiles/scripts/randpaper.sh # command to execute 
 backend = wal        # colorscheme generation backend
 alpha = 100          # transparency value
 auto_sort = true    # sort color-schemes according to xterm standard
