--- a/term/.config/alacritty/alacritty.yml
+++ b/term/.config/alacritty/alacritty.yml
@@ -3,7 +3,8 @@
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-#env:
+env:
+  WINIT_HIDPI_FACTOR: 1.7
   # TERM variable
   #
   # This value is used to set the `$TERM` environment variable for
