--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -14,6 +14,7 @@ set $mod Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # font Product Sans:monospace 9
+font pango:monospace 10
 
 # thin borders
 hide_edge_borders both
@@ -103,16 +104,28 @@ bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
-bindsym $mod+Ctrl+1 workspace 1b, move workspace to output HDMI1
-bindsym $mod+Ctrl+2 workspace 2b, move workspace to output HDMI1
-bindsym $mod+Ctrl+3 workspace 3b, move workspace to output HDMI1
-bindsym $mod+Ctrl+4 workspace 4b, move workspace to output HDMI1
-bindsym $mod+Ctrl+5 workspace 5b, move workspace to output HDMI1
-bindsym $mod+Ctrl+6 workspace 6b, move workspace to output HDMI1
-bindsym $mod+Ctrl+7 workspace 7b, move workspace to output HDMI1
-bindsym $mod+Ctrl+8 workspace 8b, move workspace to output HDMI1
-bindsym $mod+Ctrl+9 workspace 9b, move workspace to output HDMI1
-bindsym $mod+Ctrl+0 workspace 10b, move workspace to output HDMI1
+# alternate monitor bindings
+workspace 1b output HDMI1
+workspace 2b output HDMI1
+workspace 3b output HDMI1
+workspace 4b output HDMI1
+workspace 5b output HDMI1
+workspace 6b output HDMI1
+workspace 7b output HDMI1
+workspace 8b output HDMI1
+workspace 9b output HDMI1
+workspace 10b output HDMI1
+
+bindsym $mod+Ctrl+1 workspace 1b
+bindsym $mod+Ctrl+2 workspace 2b
+bindsym $mod+Ctrl+3 workspace 3b
+bindsym $mod+Ctrl+4 workspace 4b
+bindsym $mod+Ctrl+5 workspace 5b
+bindsym $mod+Ctrl+6 workspace 6b
+bindsym $mod+Ctrl+7 workspace 7b
+bindsym $mod+Ctrl+8 workspace 8b
+bindsym $mod+Ctrl+9 workspace 9b
+bindsym $mod+Ctrl+0 workspace 10b
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
@@ -137,6 +150,9 @@ bindsym $mod+Ctrl+Shift+8 move container to workspace 8b
 bindsym $mod+Ctrl+Shift+9 move container to workspace 9b
 bindsym $mod+Ctrl+Shift+0 move container to workspace 10b
 
+bindsym $mod+Ctrl+Shift+bracketright move window to output HDMI1, focus output HDMI1
+bindsym $mod+Ctrl+Shift+bracketleft move window to output primary, focus output primary
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 
@@ -144,10 +160,10 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+z exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+# bindsym $mod+Shift+z exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # lock
-bindsym $mod+Shift+x exec i3lock --color 475263
+# bindsym $mod+Shift+x exec i3lock --color 475263
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
