--- a/wm/.config/polybar/config
+++ b/wm/.config/polybar/config
@@ -90,10 +90,12 @@ label-indicator-underline = ${colors.secondary}
 type = internal/i3
 pin-workspaces = true
 ; strip-wsnumbers = true
+wrapping-scroll = false
 
 ; wms: , , , , , , , , , Ｒ, Ｓ, Ｔ, Ｕ, , , , , , 
+fuzzy-match = true
 ws-icon-default = 
-ws-icon-0 = 1;
+ws-icon-0 = 10;
 ws-icon-1 = 2;
 ws-icon-2 = 3;
 ws-icon-3 = 4;
@@ -102,19 +104,20 @@ ws-icon-5 = 6;
 ws-icon-6 = 7;
 ws-icon-7 = 8;
 ws-icon-8 = 9;
-ws-icon-9 = 10;
+ws-icon-9 = 1;
 label-unfocused = %icon%
 label-unfocused-padding = 1
 
 format = <label-state>
 
 label-visible = %icon%
+label-visible-background = ${colors.secondary}
+label-visible-foreground = ${colors.background}
 label-visible-padding = 1
 
 label-focused = %icon%
-label-focused-background = ${colors.secondary}
-label-focused-foreground = ${colors.background}
-; label-focused-underline = ${colors.primary}
+label-focused-background = ${self.label-visible-background}
+label-focused-foreground = ${self.label-visible-foreground}
 label-focused-padding = 1
 
 ; label-monitor = %name%
