--- a/wal/.config/wpg/wpg.conf
+++ b/wal/.config/wpg/wpg.conf
@@ -1,18 +1,16 @@
 [settings]
-set_wallpaper = true # set wallpaper or not in each color-scheme change
-gtk = true           # live reload GTK+ or not
-active = 0           # color to use as "active" and "inactive" shades
-light_theme = false  # whether to use a light theme or not
-editor = code        # editor to use on templates
-execute_cmd = true  # execute command after applying theme
-command = ~/dotfiles/scripts/randpaper.sh # command to execute 
-backend = wal        # colorscheme generation backend
-alpha = 100          # transparency value
-auto_sort = true    # sort color-schemes according to xterm standard
-auto_adjust = false  # auto-adjust color-schemes when adding them
-
+set_wallpaper = true
 openbox = false
+gtk = true
+active = 0
 tint2 = false
+light_theme = false
+editor = code
+execute_cmd = true
+command = ~/dotfiles/scripts/randpaper.sh
+backend = wal
+alpha = 100
+auto_sort = true
+auto_adjust = false
 
 [keywords]
-# custom-key = value
