--- a/term/.config/alacritty/alacritty.yml
+++ b/term/.config/alacritty/alacritty.yml
@@ -89,7 +89,7 @@ font:
   normal:
     family: monospace
     # The `style` can be specified to pick a specific face.
-    # style: Medium
+    style: Medium
 
   # Bold font face
   bold:
@@ -104,7 +104,7 @@ font:
     style: Italic
 
   # Point size
-  size: 7.5
+  size: 6.5
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
