--- a/wm/.config/polybar/config
+++ b/wm/.config/polybar/config
@@ -31,6 +31,7 @@ height = 32
 fixed-center = true
 top = true
 enable-ipc = true
+wm-restack = bspwm
 
 background = ${colors.background}
 foreground = ${colors.foreground}
