:bento: Fix wallpaper template use

--- a/wal/.config/wpg/wpg.conf
+++ b/wal/.config/wpg/wpg.conf
@@ -7,7 +7,7 @@ tint2 = false
 light_theme = false
 editor = code
 execute_cmd = true
-command = ~/dotfiles/scripts/randpaper.sh
+command = ~/.config/wpg/apply-wp.sh
 backend = wal
 alpha = 100
 auto_sort = true
