--- a/rofi/.config/rofi/config
+++ b/rofi/.config/rofi/config
@@ -1,5 +1,5 @@
 
-rofi.theme: ~/.config/wpg/formats/colors-rofi-light.rasi
+rofi.theme: ~/.cache/wal/colors-rofi-light.rasi
 rofi.columns: 2
 rofi.show-icons: true
-rofi.font: monospace 12
+rofi.font: monospace medium 12
