:art: Remove dependency on folder location

--- a/wm/.config/i3/config
+++ b/wm/.config/i3/config
@@ -289,5 +289,5 @@ bindsym $mod+n exec thunar
 bindsym $mod+m exec "/usr/local/bin/switch-audio-port"
 
 # Autostart apps
-exec --no-startup-id "~/dotfiles/scripts/autostart.sh"
+exec --no-startup-id "~/bin/autostart.sh"
 exec --no-startup-id "ibus-daemon --xid -d"
