:memo: Improve interaction between pywal and emacs

--- a/wal/.config/wpg/wpg.conf
+++ b/wal/.config/wpg/wpg.conf
@@ -11,6 +11,6 @@ command = ~/.config/wpg/apply-wp.sh
 backend = wal
 alpha = 100
 auto_sort = true
-auto_adjust = false
+auto_adjust = true
 
 [keywords]
