--- a/wm/.config/compton.conf
+++ b/wm/.config/compton.conf
@@ -1,7 +1,6 @@
 backend = "glx";
 glx-no-stencil = true;
-paint-on-overlay = true;
-vsync = "opengl-swc";
+vsync = true;
 # glx-copy-from-front = false;
 # sw-opti = false;
 # dbe = false;
@@ -11,8 +10,8 @@ glx-no-rebind-pixmap = true;
 
 # Shadow
 shadow = true;			# Enabled client-side shadows on windows.
-no-dock-shadow = true;		# Avoid drawing shadows on dock/panel windows.
-no-dnd-shadow = true;		# Don't draw shadows on DND windows.
+# no-dock-shadow = true;		# Avoid drawing shadows on dock/panel windows.
+# no-dnd-shadow = true;		# Don't draw shadows on DND windows.
 shadow-radius = 7;		# The blur radius for shadows. (default 12)
 shadow-offset-x = -7;		# The left offset for shadows. (default -15)
 shadow-offset-y = -7;		# The top offset for shadows. (default -15)
