--- a/wm/.config/compton.conf
+++ b/wm/.config/compton.conf
@@ -1,31 +1,29 @@
 backend = "glx";
 glx-no-stencil = true;
-vsync = true;
-# glx-copy-from-front = false;
-# sw-opti = false;
-# dbe = false;
-# refresh-rate = 0;
 unredir-if-possible = true;
 glx-no-rebind-pixmap = true;
+use-damage = true;
 
 # Shadow
 shadow = true;			# Enabled client-side shadows on windows.
-# no-dock-shadow = true;		# Avoid drawing shadows on dock/panel windows.
-# no-dnd-shadow = true;		# Don't draw shadows on DND windows.
-shadow-radius = 7;		# The blur radius for shadows. (default 12)
-shadow-offset-x = -7;		# The left offset for shadows. (default -15)
-shadow-offset-y = -7;		# The top offset for shadows. (default -15)
-# shadow-opacity = 0.7;		# The translucency for shadows. (default .75)
+shadow-radius = 12;		# The blur radius for shadows. (default 12)
+shadow-offset-x = -8;		# The left offset for shadows. (default -15)
+shadow-offset-y = -8;		# The top offset for shadows. (default -15)
+shadow-opacity = 0.6;		# The translucency for shadows. (default .75)
 # shadow-red = 0.0;		# Red color value of shadow. (0.0 - 1.0, defaults to 0)
 # shadow-green = 0.0;		# Green color value of shadow. (0.0 - 1.0, defaults to 0)
 # shadow-blue = 0.0;		# Blue color value of shadow. (0.0 - 1.0, defaults to 0)
 
-shadow-exclude = [ "n:e:Notification" ];	# Exclude conditions for shadows.
+shadow-exclude = [
+  "n:e:Notification",
+  "_GTK_FRAME_EXTENTS@:c",
+  "class_g = 'Firefox' && argb"
+];	# Exclude conditions for shadows.
 # shadow-exclude = "n:e:Notification";
 # shadow-exclude = "n:a:Conky";
 # shadow-exclude = "synapse";
 
-shadow-ignore-shaped = true;
+# shadow-ignore-shaped = true;
 
 # Opacity
 # menu-opacity = 0.9;			# The opacity for menus. (default 1.0)
@@ -34,20 +32,24 @@ shadow-ignore-shaped = true;
 inactive-opacity-override = true;	# Inactive opacity set by 'inactive-opacity' overrides value of _NET_WM_OPACITY.
 
 # Fading
-fading = true;			# Fade windows during opacity changes.
-# fade-delta = 4;		# The time between steps in a fade in milliseconds. (default 10).
-fade-in-step = 0.05;		# Opacity change between steps while fading in. (default 0.028).
-fade-out-step = 0.05;		# Opacity change between steps while fading out. (default 0.03).
-# no-fading-openclose = false;	# Fade windows in/out when opening/closing.
+fading = false;			# Fade windows during opacity changes.
+fade-delta = 4;		# The time between steps in a fade in milliseconds. (default 10).
+# fade-in-step = 0.05;		# Opacity change between steps while fading in. (default 0.028).
+# fade-out-step = 0.05;		# Opacity change between steps while fading out. (default 0.03).
+no-fading-openclose = true;	# Fade windows in/out when opening/closing.
 
 # Other
 #inactive-dim = 0.5;		# Dim inactive windows. (0.0 - 1.0, defaults to 0).
 mark-wmwin-focused = true;	# Try to detect WM windows and mark them as active.
 mark-ovredir-focused = true;
 detect-rounded-corners = true;
+detect-client-opacity = true;
 
 # Window type settings
 wintypes:
 {
   tooltip = { fade = true; shadow = false; opacity = 0.75; };
+  utility = { shadow = false; };
+  dnd = { shadow = false; };
+  dock = { shadow = false; };
 };
