:sparkles: Convert fully to emacs 27

--- a/fonts/.config/fontconfig/fonts.conf
+++ b/fonts/.config/fontconfig/fonts.conf
@@ -1,16 +1,11 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-  <alias>
-    <family>sans</family>
-    <prefer><family>Ubuntu</family></prefer>
-  </alias>
-
   <!-- Generic content -->
   <match>
     <test name="family"><string>Arial</string></test>
     <edit name="family" mode="assign" binding="strong">
-      <string>Product Sans</string>
+      <string>Overpass</string>
     </edit>
   </match>
 </fontconfig>
