--- a/wal/.config/wpg/wpg.conf
+++ b/wal/.config/wpg/wpg.conf
@@ -2,15 +2,17 @@
 set_wallpaper = true
 openbox = false
 gtk = true
-active = 0
+active = 2
 tint2 = false
 light_theme = false
-editor = code
+editor = emacsclient -c
 execute_cmd = true
 command = ~/.config/wpg/apply-wp.sh
 backend = wal
 alpha = 100
 auto_sort = true
-auto_adjust = true
+auto_adjust = false
+smart_sort = true
 
 [keywords]
+
