--- a/fonts/.config/fontconfig/fonts.conf
+++ b/fonts/.config/fontconfig/fonts.conf
@@ -1,11 +1,27 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-  <!-- Generic content -->
+  <match target="font">
+    <edit mode="assign" name="hintstyle" >
+      <const>hintslight</const>
+    </edit>
+    <edit mode="assign" name="rgba" >
+      <const>rgb</const>
+    </edit>
+    <edit mode="assign" name="lcdfilter">
+      <const>lcddefault</const>
+    </edit>
+  </match>
   <match>
     <test name="family"><string>Arial</string></test>
     <edit name="family" mode="assign" binding="strong">
-      <string>Overpass</string>
+      <string>Noto Sans</string>
+    </edit>
+  </match>
+  <match>
+    <test name="family"><string>Times New Roman</string></test>
+    <edit name="family" mode="assign" binding="strong">
+      <string>Merriweather</string>
     </edit>
   </match>
 </fontconfig>
