--- a/wm/.config/polybar/config
+++ b/wm/.config/polybar/config
@@ -25,7 +25,7 @@ margin-bottom = 5
 [bar/main]
 monitor = ${env:MONITOR:eDP1}
 width = 100%
-height = 32
+height = 30
 fixed-center = true
 top = true
 enable-ipc = true
@@ -50,7 +50,7 @@ font-1 = "Material Design Icons:pixelsize=14"
 modules-left = cpu memory vpn wlan
 modules-center =
 modules-right = randpaper bspwm volume battery date powermenu
-tray-position = center
+tray-position = left
 
 scroll-up = bspwm-desknext
 scroll-down = bspwm-deskprev
@@ -59,7 +59,6 @@ scroll-down = bspwm-deskprev
 inherit = bar/main
 monitor = HDMI1
 tray-position = none
-
 
 
 [module/xwindow]
