:snowflake: Upgrade nixos to 20.03

--- a/term/.config/alacritty/alacritty.yml
+++ b/term/.config/alacritty/alacritty.yml
@@ -56,7 +56,7 @@ scrolling:
   # faux_multiplier: 3
 
   # Scroll to the bottom when new text is written to the terminal.
-  auto_scroll: false
+  # auto_scroll: false
 
 # Spaces per Tab (changes require restart)
 #
