--- a/term/.config/alacritty/alacritty.yml
+++ b/term/.config/alacritty/alacritty.yml
@@ -18,9 +18,9 @@ window:
   #
   # Specified in number of columns/lines, not pixels.
   # If both are `0`, this setting is ignored.
-  dimensions:
-    columns: 80
-    lines: 24
+  # dimensions:
+  #   columns: 80
+  #   lines: 24
 
   # Window padding (changes require restart)
   #
@@ -104,7 +104,7 @@ font:
     style: Italic
 
   # Point size
-  size: 11
+  size: 12
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
