--- a/wm/.config/gtk-3.0/settings.ini
+++ b/wm/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Arc
-gtk-icon-theme-name=ePapirus
-gtk-font-name=Overpass 11
+gtk-icon-theme-name=Paper
+gtk-font-name=sans 12
 gtk-cursor-theme-name=Bibata_Oil
 gtk-cursor-theme-size=16
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
