--- a/wm/.config/picom.conf
+++ b/wm/.config/picom.conf
@@ -1,11 +1,19 @@
 backend = "glx";
 glx-no-stencil = true;
 unredir-if-possible = true;
-glx-no-rebind-pixmap = true;
+glx-no-rebind-pixmap = false;
 use-damage = true;
 
+# Rounded corners
+corner-radius = 10.0;
+round-borders = 1;
+rounded-corners-exclude = [
+  #"window_type = 'normal'",
+  "class_g = 'Polybar'",
+];
+
 # Shadow
-shadow = true;			# Enabled client-side shadows on windows.
+shadow = false;			# Enabled client-side shadows on windows.
 shadow-radius = 12;		# The blur radius for shadows. (default 12)
 shadow-offset-x = -8;		# The left offset for shadows. (default -15)
 shadow-offset-y = -8;		# The top offset for shadows. (default -15)
