--- a/wm/.config/polybar/config
+++ b/wm/.config/polybar/config
@@ -1,31 +1,47 @@
 ; scroll to the bottom for some icons...
 
 [colors]
-background = ${xrdb:color0:#222}
-background-alt = ${xrdb:color1:#dfdfdf}
-foreground = ${xrdb:color7:#dfdfdf}
-inactive = ${xrdb:color8:#555}
-foreground-bright = ${xrdb:color6:#dfdfdf}
-; Keep trying to flip colors 5 and 2
-primary = ${xrdb:color5:#ffb52a}
-secondary = ${xrdb:color2:#e60053}
-alert = ${xrdb:color4:#bd2c40}
+black = ${xrdb:color0:#ff0000}
+brightblack = ${xrdb:color8:#ff0000}
+red = ${xrdb:color1:#ff0000}
+brightred = ${xrdb:color9:#ff0000}
+green = ${xrdb:color2:#00ff00}
+brightgreen = ${xrdb:color10:#00ff00}
+yellow = ${xrdb:color3:#00ff00}
+brightyellow = ${xrdb:color11:#00ff00}
+blue = ${xrdb:color4:#0000ff}
+purple = ${xrdb:color5:#0000ff}
+brightpurple = ${xrdb:color13:#0000ff}
+cyan = ${xrdb:color6:#0000ff}
+brightcyan = ${xrdb:color14:#0000ff}
+white = ${xrdb:color7:#0000ff}
+brightwhite = ${xrdb:color15:#0000ff}
 
-misc1 = ${xrdb:color2:#bd2c40}
-misc2 = ${xrdb:color3:#bd2c40}
+background = ${colors.black}
+background-alt = ${colors.black}
+; background-alt = ${xrdb:color4:#dfdfdf}
+foreground = ${colors.white}
+inactive = ${colors.brightblack}
+foreground-bright = ${colors.cyan}
+; Keep trying to flip colors 5 and 2
+primary = ${colors.purple}
+secondary = ${colors.green}
+alert = ${colors.blue}
+
+misc1 = ${colors.cyan}
+misc2 = ${colors.brightyellow}
 
 [settings]
 screenchange-reload = true
 
 [global/wm]
 margin-top = 0
-margin-bottom = 5
-
+margin-bottom = 0
 
 [bar/main]
 monitor = ${env:MONITOR:eDP1}
 width = 100%
-height = 30
+height = 32
 fixed-center = true
 top = true
 enable-ipc = true
@@ -34,23 +50,34 @@ wm-restack = bspwm
 background = ${colors.background}
 foreground = ${colors.foreground}
 
+; separator = ":"
+
 line-size = 3
 line-color = #f00
 
-padding-left = 2
-padding-right = 2
-module-margin = 1
+padding-left = 1
+padding-right = 1
+; module-margin = 1
 
-border-bottom-size = 3
-border-bottom-color = ${colors.secondary}
+; border-bottom-size = 3
+; border-bottom-color = ${colors.secondary}
 
-font-0 = "monospace:size=11:weight=bold"
-font-1 = "Material Design Icons:pixelsize=14"
+font-0 = "monospace:size=12:weight=bold;1"
+; Provides nice icons for audio, clock, power, etc.
+; Might be able to find unicode replacements.
+font-1 = "Material Design Icons:pixelsize=13;3"
+; Fallback for some unicode characters, like vertical meters.
+font-2 = "DejaVu Sans Mono:size=11:weight=bold;1"
+font-3 = "Noto Sans CJK JP:size=11:weight=bold;1"
+font-4 = "Segoe UI Symbol:size=11:weight=bold;2"
 
-modules-left = cpu memory vpn wlan
+modules-left = powermenu cpu memory vpn iwd player
 modules-center =
-modules-right = randpaper bspwm volume battery date powermenu
-tray-position = left
+modules-right = randpaper bspwm volume battery date
+; Reserve room for about four tray items.
+tray-position = right
+tray-detached = true
+tray-offset-x = -890
 
 scroll-up = bspwm-desknext
 scroll-down = bspwm-deskprev
@@ -154,10 +181,11 @@ label-unfocused = %icon%
 label-unfocused-padding = 1
 
 format = <label-state>
+format-padding = 1
 
 label-visible = %icon%
-label-visible-background = ${colors.secondary}
-label-visible-foreground = ${colors.background}
+label-visible-background = ${colors.green}
+label-visible-foreground = ${colors.foreground}
 label-visible-padding = 1
 
 label-focused = %icon%
@@ -191,6 +219,8 @@ label-occupied-padding = 1
 type = internal/cpu
 interval = 10
 format = <ramp-load>
+; format-background = ${colors.background-alt}
+format-padding = 1
 format-prefix = "CPU "
 format-prefix-foreground = ${colors.inactive}
 ramp-load-0 = ▁
@@ -206,6 +236,8 @@ ramp-load-7 = █
 type = internal/memory
 interval = 10
 format = <ramp-used>
+; format-background = ${colors.background-alt}
+format-padding = 1
 format-prefix = "RAM "
 format-prefix-foreground = ${colors.inactive}
 foreground = ${colors.primary}
@@ -223,21 +255,24 @@ type = internal/network
 interface = wlp58s0
 interval = 3
 
-format-connected-prefix = "%{A1:networkmanager_dmenu:}"
+format-connected-padding = 1
+format-disconnected-padding = 1
+
+format-connected-prefix = "%{A1:networkmanager_dmenu&:}"
 format-connected-suffix = "%{A}"
 format-disconnected-prefix = ${self.format-connected-prefix}
 format-disconnected-suffix = ${self.format-connected-suffix}
 
 format-connected = <ramp-signal> <label-connected>
 ; format-connected-underline = #9f78e1
-label-connected = %essid% [%downspeed%]
+label-connected = %essid% [%downspeed:8%]
 
 format-packetloss = <label-packetloss>
 label-packetloss = Connecting
 
 format-disconnected = <label-disconnected>
 ;format-disconnected-underline = ${self.format-connected-underline}
-label-disconnected =  Borked
+label-disconnected =  Offline
 label-disconnected-foreground = ${colors.inactive}
 
 ; wifi: , , , , , , , , , , 爛, 嵐, 襤, 蠟, 冷,
@@ -249,11 +284,24 @@ ramp-signal-3 = 襤
 ramp-signal-4 = 蠟
 ramp-signal-foreground = ${colors.misc1}
 
+[module/iwd]
+type = custom/script
+exec = ~/.config/polybar/wlan-status.sh
+interval = 5
+format-padding = 1
 
 [module/vpn]
 type = custom/script
 exec = ~/.config/polybar/vpn-status.sh
-interval = 10
+interval = 5
+format-padding = 1
+click-left = ~/bin/rofi-vpn.sh
+
+[module/player]
+type = custom/script
+exec = ~/.config/polybar/player-status.sh
+interval = 5
+format-padding = 1
 
 [module/eth]
 type = internal/network
@@ -278,14 +326,21 @@ interval = 20
 format-prefix = 
 format-prefix-foreground = ${colors.misc2}
 label = %date% %time%
-date =
-date-alt = " %Y-%m-%d"
-time = %H:%M
-time-alt = %H:%M
+date = " %a"
+date-alt = " %a %m-%d,"
+time = %I:%M %p
+time-alt = ${self.time}
+format-background = ${colors.background-alt}
+format-padding = 1
 
 
 [module/volume]
 type = internal/volume
+
+format-volume-background = ${colors.background-alt}
+format-muted-background = ${self.format-volume-background}
+format-volume-padding = 1
+format-muted-padding = 1
 
 format-volume-prefix = %{A3:pavucontrol&:}
 format-volume-suffix = %{A}
@@ -293,7 +348,7 @@ format-volume = <label-volume> <bar-volume>
 
 ;volume: , , , 
 label-volume = ""
-label-volume-foreground = ${colors.foreground-bright}
+label-volume-foreground = ${colors.brightcyan}
 ; format-volume-underline = ${colors.foreground-bright}
 
 format-muted-foreground = ${colors.inactive}
@@ -306,8 +361,8 @@ bar-volume-gradient = false
 
 ; heart: , , , 
 bar-volume-indicator = |
-bar-volume-fill = -
-bar-volume-empty = -
+bar-volume-fill = —
+bar-volume-empty = —
 bar-volume-empty-foreground = ${colors.inactive}
 
 
@@ -315,8 +370,13 @@ bar-volume-empty-foreground = ${colors.inactive}
 type = internal/battery
 battery = BAT1
 adapter = AC
-full-at = 98
+full-at = 95
+poll-interval = 10
 time-format = %H:%M
+
+format-charging-padding = 1
+format-discharging-padding = 1
+format-full-padding = 1
 
 format-charging-prefix = %{A3:xfce4-power-manager-settings&:}
 format-charging-suffix = %{A}
@@ -329,30 +389,37 @@ label-discharging = +%time%
 format-charging = <label-charging> <bar-capacity>
 label-charging = -%time%
 
+; Make sure all label variants match in width.
+label-full = ++Full
+format-full = <label-full> <bar-capacity>
+
 bar-capacity-width = 10
 
 ; 
-bar-capacity-indicator = 
+bar-capacity-indicator = 
 bar-capacity-fill = 
 bar-capacity-empty = 
-bar-capacity-fill-foreground = ${colors.primary}
-bar-capacity-indicator-foreground = ${colors.primary}
+bar-capacity-fill-foreground = ${colors.red}
+bar-capacity-indicator-foreground = ${self.bar-capacity-fill-foreground}
 bar-capacity-empty-foreground = ${colors.inactive}
 
 
 [module/powermenu]
 type = custom/text
 content = 
-click-left = rofi-logout.sh
-content-foreground = ${colors.background-alt}
+click-left = rofi-logout.sh &
+content-foreground = ${colors.brightred}
+content-padding = 1
 
 
 [module/randpaper]
 type = custom/text
 ; landscape: , , , , 
 content = 
-content-foreground = ${colors.background-alt}
-click-left = wpg -m
+content-foreground = ${colors.brightyellow}
+content-padding = 1
+click-left = wpg -m &
+click-right = wpg &
 
 
 ; terminal: 
