:sparkles: Switch to wayland+sway!
This breaks some of my bspwm setup. It's still usable for emergency
situations, but sway works great in nearly all scenarios and seems more
stable.
polybar => waybar
dunst => mako
autorandr => kanshi
rofi => wofi, which I've styled quite nicely

--- a/wal/.config/wpg/wpg.conf
+++ b/wal/.config/wpg/wpg.conf
@@ -5,7 +5,7 @@ gtk = true
 active = 2
 tint2 = false
 light_theme = false
-editor = emacsclient -c
+editor = emacsclient
 execute_cmd = true
 command = ~/.config/wpg/apply-wp.sh
 backend = wal
