:squid: Keep plowing away at doom emacs

--- a/fonts/.config/fontconfig/fonts.conf
+++ b/fonts/.config/fontconfig/fonts.conf
@@ -2,6 +2,12 @@
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
   <match>
+    <test name="family"><string>Segoe UI</string></test>
+    <edit name="family" mode="assign" binding="strong">
+      <string>Sans</string>
+    </edit>
+  </match>
+  <match>
     <test name="family"><string>Arial</string></test>
     <edit name="family" mode="assign" binding="strong">
       <string>Noto Sans</string>
