:squid: Start using EXWM!

--- a/wm/.config/picom.conf
+++ b/wm/.config/picom.conf
@@ -1,12 +1,13 @@
-backend = "glx";
+backend = "xrender";
 glx-no-stencil = true;
 unredir-if-possible = true;
 glx-no-rebind-pixmap = false;
 use-damage = true;
+vsync = true;
 
 # Rounded corners
-corner-radius = 10.0;
-round-borders = 1;
+corner-radius = 0.0;
+round-borders = 0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'Polybar'",
