:arrow_up: Update various dependencies

--- a/fonts/.config/fontconfig/fonts.conf
+++ b/fonts/.config/fontconfig/fonts.conf
@@ -2,21 +2,25 @@
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
   <match>
-    <test name="family"><string>Segoe UI</string></test>
+    <test name="family">
+      <string>Segoe UI</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Sans</string>
     </edit>
   </match>
   <match>
-    <test name="family"><string>Arial</string></test>
+    <test name="family">
+      <string>Arial</string>
+    </test>
     <edit name="family" mode="assign" binding="strong">
       <string>Noto Sans</string>
     </edit>
   </match>
-  <match>
-    <test name="family"><string>Times New Roman</string></test>
-    <edit name="family" mode="assign" binding="strong">
-      <string>Merriweather</string>
-    </edit>
-  </match>
+  <!-- <match> -->
+  <!--   <test name="family"><string>Times New Roman</string></test> -->
+  <!--   <edit name="family" mode="assign" binding="strong"> -->
+  <!--     <string>Merriweather</string> -->
+  <!--   </edit> -->
+  <!-- </match> -->
 </fontconfig>
