--- a/term/.config/wal/templates/alacritty.yml
+++ b/term/.config/wal/templates/alacritty.yml
@@ -223,7 +223,7 @@ colors:
 #   - Linear
 #
 # Specifying a `duration` of `0` will disable the visual bell.
-visual_bell:
+bell:
   animation: EaseOutExpo
   duration: 0
 
@@ -284,7 +284,7 @@ selection:
   # clipboard.
   save_to_clipboard: false
 
-dynamic_title: true
+  # dynamic_title: true
 
 cursor:
   # Cursor style
