--- a/wm/.config/picom.conf
+++ b/wm/.config/picom.conf
@@ -14,14 +14,14 @@ rounded-corners-exclude = [
 ];
 
 # Shadow
-shadow = false;			# Enabled client-side shadows on windows.
-shadow-radius = 12;		# The blur radius for shadows. (default 12)
-shadow-offset-x = -8;		# The left offset for shadows. (default -15)
-shadow-offset-y = -8;		# The top offset for shadows. (default -15)
-shadow-opacity = 0.6;		# The translucency for shadows. (default .75)
-# shadow-red = 0.0;		# Red color value of shadow. (0.0 - 1.0, defaults to 0)
-# shadow-green = 0.0;		# Green color value of shadow. (0.0 - 1.0, defaults to 0)
-# shadow-blue = 0.0;		# Blue color value of shadow. (0.0 - 1.0, defaults to 0)
+shadow = true; # Enabled client-side shadows on windows.
+shadow-radius = 12; # The blur radius for shadows. (default 12)
+shadow-offset-x = -10; # The left offset for shadows. (default -15)
+shadow-offset-y = -10; # The top offset for shadows. (default -15)
+shadow-opacity = 0.5; # The translucency for shadows. (default .75)
+# shadow-red = 0.0; # Red color value of shadow. (0.0 - 1.0, defaults to 0)
+# shadow-green = 0.0; # Green color value of shadow. (0.0 - 1.0, defaults to 0)
+# shadow-blue = 0.0; # Blue color value of shadow. (0.0 - 1.0, defaults to 0)
 
 shadow-exclude = [
   "n:e:Notification",
@@ -35,9 +35,9 @@ shadow-exclude = [
 # shadow-ignore-shaped = true;
 
 # Opacity
-# menu-opacity = 0.9;			# The opacity for menus. (default 1.0)
-# inactive-opacity = 1;			# Opacity of inactive windows. (0.1 - 1.0)
-#frame-opacity = 0.8;			# Opacity of window titlebars and borders. (0.1 - 1.0)
+# menu-opacity = 0.9; # The opacity for menus. (default 1.0)
+# inactive-opacity = 1; # Opacity of inactive windows. (0.1 - 1.0)
+#frame-opacity = 0.8; # Opacity of window titlebars and borders. (0.1 - 1.0)
 inactive-opacity-override = true;	# Inactive opacity set by 'inactive-opacity' overrides value of _NET_WM_OPACITY.
 
 # Fading
