--- a/wm/.config/picom.conf
+++ b/wm/.config/picom.conf
@@ -14,7 +14,7 @@ rounded-corners-exclude = [
 ];
 
 # Shadow
-shadow = true; # Enabled client-side shadows on windows.
+shadow = false; # Enabled client-side shadows on windows.
 shadow-radius = 12; # The blur radius for shadows. (default 12)
 shadow-offset-x = -10; # The left offset for shadows. (default -15)
 shadow-offset-y = -10; # The top offset for shadows. (default -15)
