--- a/wm/.config/polybar/config
+++ b/wm/.config/polybar/config
@@ -41,7 +41,7 @@ margin-bottom = 0
 [bar/main]
 monitor = ${env:MONITOR:eDP1}
 width = 100%
-height = 30
+height = 28
 fixed-center = true
 top = true
 enable-ipc = true
@@ -62,10 +62,10 @@ padding-right = 1
 border-bottom-size = 2
 border-bottom-color = ${colors.secondary}
 
-font-0 = "monospace:pixelsize=12:weight=bold;2"
+font-0 = "monospace:size=11:weight=bold;2"
 ; Provides nice icons for audio, clock, power, etc.
 ; Might be able to find unicode replacements.
-font-1 = "Material Design Icons:pixelsize=13;3"
+font-1 = "Material Design Icons:pixelsize=12;1"
 ; Fallback for some unicode characters, like vertical meters.
 font-2 = "DejaVu Sans Mono:size=11:weight=bold;1"
 font-3 = "Noto Sans CJK JP:size=11:weight=bold;1"
@@ -77,7 +77,7 @@ modules-right = iwd randpaper cpu memory volume battery date
 ; Reserve room for about four tray items.
 tray-position = right
 tray-detached = true
-tray-offset-x = -700
+tray-offset-x = -575
 
 scroll-up = bspwm-desknext
 scroll-down = bspwm-deskprev
@@ -97,7 +97,7 @@ label = %title:0:30:...%
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.inactive}
 format-prefix-underline = ${colors.secondary}
 
@@ -114,6 +114,9 @@ type = custom/ipc
 hook-0 = ~/.config/polybar/exwm-status.sh
 initial = 1
 format-padding = 1
+; type = custom/script
+; exec = ~/.config/polybar/exwm-status.sh
+; interval = 0.6
 
 [module/i3]
 type = internal/i3
@@ -121,19 +124,18 @@ pin-workspaces = true
 ; strip-wsnumbers = true
 wrapping-scroll = false
 
-; wms: , , , , , , , , , Ｒ, Ｓ, Ｔ, Ｕ, , , , , , 
 fuzzy-match = true
 ws-icon-default = 
-ws-icon-0 = 10;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
-ws-icon-7 = 8;
-ws-icon-8 = 9;
-ws-icon-9 = 1;
+ws-icon-0 = 10;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
+ws-icon-6 = 7;
+ws-icon-7 = 8;
+ws-icon-8 = 9;
+ws-icon-9 = 1;
 label-unfocused = %icon%
 label-unfocused-padding = 1
 
@@ -152,11 +154,9 @@ label-focused-padding = 1
 ; label-monitor = %name%
 
 ; label-occupied = %index%
-; label-occupied = •
 ; label-occupied-padding = 2
 
 ; label-urgent = %index%!
-; label-urgent = •
 label-urgent = %icon%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
@@ -172,16 +172,16 @@ pin-workspaces = true
 
 fuzzy-match = true
 ws-icon-default = 
-ws-icon-0 = 0;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
-ws-icon-7 = 8;
-ws-icon-8 = 9;
-ws-icon-9 = 1;
+ws-icon-0 = 0;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
+ws-icon-6 = 7;
+ws-icon-7 = 8;
+ws-icon-8 = 9;
+ws-icon-9 = 1;
 label-unfocused = %icon%
 label-unfocused-padding = 1
 
@@ -201,11 +201,9 @@ label-focused-padding = 1
 ; label-monitor = %name%
 
 ; label-occupied = %index%
-; label-occupied = •
 ; label-occupied-padding = 2
 
 ; label-urgent = %index%!
-; label-urgent = •
 label-urgent = %icon%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
@@ -218,8 +216,6 @@ label-occupied = %icon%
 label-occupied-padding = 1
 
 
-; harddrive: 
-; chip: 
 [module/cpu]
 type = internal/cpu
 interval = 10
@@ -262,6 +258,7 @@ interval = 5
 format-margin = 10
 
 [module/vpn]
+; 󰌾󰌿󰍀󰍁
 type = custom/script
 exec = ~/.config/polybar/vpn-status.sh
 interval = 5
@@ -281,7 +278,7 @@ interface = net0
 interval = 3.0
 
 format-connected-underline = #55aa55
-format-connected-prefix = " "
+format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.inactive}
 label-connected = ;;%local_ip%
 
@@ -295,7 +292,7 @@ format-disconnected =
 [module/date]
 type = internal/date
 interval = 20
-format-prefix = 
+format-prefix = 󰅐
 format-prefix-foreground = ${colors.misc2}
 label = %date% %time%
 date-alt = " %a"
@@ -318,20 +315,19 @@ format-volume-prefix = %{A3:pavucontrol&:}
 format-volume-suffix = %{A}
 format-volume = <label-volume> <bar-volume>
 
-;volume: , , , 
-label-volume = ""
+;volume:󰕾󰕿󰖀󰖁
+label-volume = "󰕾"
 label-volume-foreground = ${colors.brightcyan}
 ; format-volume-underline = ${colors.foreground-bright}
 
 format-muted-foreground = ${colors.inactive}
 format-muted = <label-muted> <bar-volume>
-label-muted = ""
+label-muted = "󰖁"
 
 bar-volume-width = 10
 bar-volume-foreground-0 = ${self.label-volume-foreground}
 bar-volume-gradient = false
 
-; heart: , , , 
 bar-volume-indicator = |
 bar-volume-fill = —
 bar-volume-empty = —
@@ -343,7 +339,7 @@ type = internal/battery
 battery = BAT1
 adapter = AC
 full-at = 95
-poll-interval = 10
+poll-interval = 5
 time-format = %H:%M
 
 format-charging-padding = 1
@@ -355,22 +351,21 @@ format-charging-suffix = %{A}
 format-discharging-prefix = ${self.format-charging-prefix}
 format-discharging-suffix = ${self.format-charging-suffix}
 
-format-discharging = <bar-capacity>
-label-discharging = +%time%
+; format-discharging = <bar-capacity>
+label-discharging = 󰋔 %percentage%%
 
-format-charging = <bar-capacity>
-label-charging = -%time%
+; format-charging = <bar-capacity>
+label-charging = 󰋑 %percentage%%
 
 ; Make sure all label variants match in width.
-label-full = ++Full
-format-full = <bar-capacity>
+label-full = 󰋕 %percentage%%
+; format-full = <bar-capacity>
 
 bar-capacity-width = 10
 
-; 
-bar-capacity-indicator = 
-bar-capacity-fill = 
-bar-capacity-empty = 
+bar-capacity-indicator = 󰋔
+bar-capacity-fill = 󰋑
+bar-capacity-empty = 󰋕
 bar-capacity-fill-foreground = ${colors.red}
 bar-capacity-indicator-foreground = ${self.bar-capacity-fill-foreground}
 bar-capacity-empty-foreground = ${colors.inactive}
@@ -378,7 +373,7 @@ bar-capacity-empty-foreground = ${colors.inactive}
 
 [module/powermenu]
 type = custom/text
-content = 
+content = 󰐼
 ; click-left = emacsclient -e "(counsel-logout)" &
 click-left = rofi-logout.sh
 content-foreground = ${colors.brightred}
@@ -387,41 +382,20 @@ content-padding = 1
 
 [module/randpaper]
 type = custom/text
-; landscape: , , , , 
-content = 
+content = 󰋩
 content-foreground = ${colors.brightyellow}
 content-padding = 1
 click-left = wpg -m &
 click-right = wpg &
 
 
-; terminal: 
-; flower: 
-; bg folder: 
-; speedometer: , , , 
-; all gender: 
-; ghost: 
-; heart: , , , , 
-; headphones: 
-; home: 
-; landscape: , , , , 
-; key: 
-; keyboard: 
-; penguin: 
-; exit: 
-; lock: 
-; calendar: , 
-; art: 
-; totoro: 
-; power: , , , 
-; radioactive: 
-; recycle: 
-; rocket: 
-; wifi: , , , , , , , , , , 爛, 嵐, 襤, 蠟, 冷,
-;       浪, 鸞, 藍, 臘, 朗, 狼, 來
-; everything: 
-;volume: , , , 
-; alert: , 
-;  yinyang: , , , , ｇ,
-; wms: , , , , , , , , , Ｒ, Ｓ, Ｔ, Ｕ, , , , , 
-; hdmi: 
+; input: 󰍽󰍾󰍬󰍭󰍮󰍯
+; system: 󰍛󰐪󰐬󰅐
+; os: 󰌽
+; music: 󰎇󰎈󰎊󰎄󰎅󰎆󰐌󰐍󰐎󰐋󰒝󰒞󰒟󰒫󰒬󰒭󰒮
+; fun: 󰐀󰐁󰐱󰐼󰑌󰑙󰑣󰒲󰒳
+; network: 󰐻󰒘󰒙󰒢󰔪󰕥󰖩󰖪
+; audio: 󰕾󰕿󰖀󰖁
+; battery: 󰁹󰁺󰁻󰁼󰁽󰁾󰁿󰂀󰂁󰂂󰂃󰂄󰂅󰂌󰂍󰂎
+; bt: 󰂯󰂰󰂱󰂲󰂳
+; brightness: 󰃝󰃞󰃟󰃠
