--- a/wm/.config/picom.conf
+++ b/wm/.config/picom.conf
@@ -1,17 +1,17 @@
-backend = "xrender";
+backend = "glx";
 glx-no-stencil = true;
-unredir-if-possible = true;
+unredir-if-possible = false;
 glx-no-rebind-pixmap = false;
 use-damage = true;
 vsync = true;
 
 # Rounded corners
-corner-radius = 0.0;
-round-borders = 0;
-rounded-corners-exclude = [
-  #"window_type = 'normal'",
-  "class_g = 'Polybar'",
-];
+# corner-radius = 0.0;
+# round-borders = 0;
+# rounded-corners-exclude = [
+#   #"window_type = 'normal'",
+#   "class_g = 'Polybar'",
+# ];
 
 # Shadow
 shadow = false; # Enabled client-side shadows on windows.
@@ -42,7 +42,7 @@ inactive-opacity-override = true;	# Inactive opacity set by 'inactive-opacity' o
 
 # Fading
 fading = false;			# Fade windows during opacity changes.
-fade-delta = 4;		# The time between steps in a fade in milliseconds. (default 10).
+# fade-delta = 4;		# The time between steps in a fade in milliseconds. (default 10).
 # fade-in-step = 0.05;		# Opacity change between steps while fading in. (default 0.028).
 # fade-out-step = 0.05;		# Opacity change between steps while fading out. (default 0.03).
 no-fading-openclose = true;	# Fade windows in/out when opening/closing.
