--- a/wm/.config/polybar/config
+++ b/wm/.config/polybar/config
@@ -41,7 +41,7 @@ margin-bottom = 0
 [bar/main]
 monitor = ${env:MONITOR:eDP1}
 width = 100%
-height = 28
+height = 27
 fixed-center = true
 top = true
 enable-ipc = true
@@ -59,13 +59,13 @@ padding-left = 1
 padding-right = 1
 ; module-margin = 1
 
-border-bottom-size = 4
-border-bottom-color = ${colors.inactive}
+border-bottom-size = 1
+border-bottom-color = ${colors.foreground}
 
 font-0 = "monospace:size=11:weight=bold;2"
 ; Provides nice icons for audio, clock, power, etc.
 ; Might be able to find unicode replacements.
-font-1 = "Material Design Icons:pixelsize=13;2"
+font-1 = "Material Design Icons:pixelsize=13;3"
 ; Fallback for some unicode characters, like vertical meters.
 font-2 = "DejaVu Sans Mono:size=11:weight=bold;1"
 font-3 = "Noto Sans CJK JP:size=11:weight=bold;1"
@@ -77,7 +77,7 @@ modules-right = iwd randpaper cpu memory volume battery date
 ; Reserve room for about four tray items.
 tray-position = right
 tray-detached = true
-tray-offset-x = -590
+tray-offset-x = -585
 
 scroll-up = bspwm-desknext
 scroll-down = bspwm-deskprev
@@ -295,8 +295,8 @@ interval = 20
 format-prefix = 󰅐
 format-prefix-foreground = ${colors.misc2}
 label = %date% %time%
-date-alt = " %a"
 date = " %a %m-%d,"
+date-alt = ${self.date}
 time = %I:%M %p
 time-alt = ${self.time}
 format-background = ${colors.background-alt}
